--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   cached_network_image: ^3.2.0
+  path_provider: ^2.0.9
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test: {sdk: flutter}
